tests/NormalTests/paczka1/small_fuzzy/76643556.err
Error in line 8: A827 A827 13,3
Error in line 12: aM259SG0COi A573 23,3
